--- a/css/style.css
+++ b/css/style.css
@@ -943,25 +943,30 @@ LINEQR専用ページ＿page7
 申し込みボタン
 ===================================================*/
 .sp-apply {
-    display: inline-block;
-    margin-bottom: 50px;
+    max-width: 400px;
+    margin: 0 auto;
 }
 
 .sp-apply .contact-btn {
-    width: 400px;
-    height: 50px;
+    width: 100%;
+    height: 70px;
+    padding-block: 20px ;
     font-size: 1.8rem;
+    margin-bottom: 50px;
 }
 
 /*=================================================
 動画ボタン
 ===================================================*/
+.sp-movie {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
 .movie-btn {
     display: inline-block;
-    margin: 0 auto;
-    width: 400px;
-    height: 70px;
-    padding-inline: 10px;
+    width: 100%;
+    padding: 10px;
     background: linear-gradient(to right, #70B8EE, #497BA1);
     color: white;
     text-decoration: none;
@@ -974,6 +979,8 @@ LINEQR専用ページ＿page7
     text-shadow: 0 2px 4px rgba(0, 0, 0, 0.35);
     font-size: 1.8rem;
 }
+
+
 
 .movie-btn:hover {
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
@@ -1450,7 +1457,7 @@ img {
 
 #btn_animation .btn {
     display: block;
-    width: 400px;
+    width: 350px;
     height: 60px;
     font-size: 2.3rem;
     line-height: 60px;
